--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/JonnyGabc/NFTGAME#readme",
   "dependencies": {
+    "@alch/alchemy-web3": "^1.1.4",
     "@openzeppelin/contracts": "^4.3.2",
     "dotenv": "^10.0.0",
     "hardhat": "^2.6.5",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
-    "ethers": "^5.0.0"
+    "@openzeppelin/hardhat-upgrades": "^1.10.0",
+    "ethers": "^5.4.7"
   }
 }
